Bug 94311 - [PATCH] Implicit conversion from FsStreamDirection to TpMediaStreamDirection breaks -Werror build for clang
Summary: [PATCH] Implicit conversion from FsStreamDirection to TpMediaStreamDirection ...
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-farstream (show other bugs)
Version: git master
Hardware: Other FreeBSD
: medium normal
Assignee: Olivier Crête
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-26 14:46 UTC by Ting-Wei Lan
Modified: 2016-02-26 16:22 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Don't implicitly convert FsStreamDirection to TpMediaStreamDirection (1.28 KB, patch)
2016-02-26 14:47 UTC, Ting-Wei Lan
Details | Splinter Review

Description Ting-Wei Lan 2016-02-26 14:46:43 UTC
Please see the attached patch. Although FsStreamDirection and TpMediaStreamDirection have the same value, they are not the same enum type, so implicitly conversion between them causes warnings.
Comment 1 Ting-Wei Lan 2016-02-26 14:47:38 UTC
Created attachment 121987 [details] [review]
Don't implicitly convert FsStreamDirection to TpMediaStreamDirection
Comment 2 Olivier Crête 2016-02-26 16:22:08 UTC
Merged, thank you
Comment 3 Olivier Crête 2016-02-26 16:22:20 UTC
Commit is:

commit 65acc02e481a482b5fe0aff292668b75b29d26df
Author: Ting-Wei Lan <lantw@src.gnome.org>
Date:   Fri Feb 26 22:44:38 2016 +0800

    stream: Don't implicitly convert FsStreamDirection to TpMediaStreamDirection
    
    https://bugs.freedesktop.org/show_bug.cgi?id=94311


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.