stream: Don't implicitly convert FsStreamDirection to TpMediaStreamDirection

https://bugs.freedesktop.org/show_bug.cgi?id=94311